# libemc

./: CMakeLists.txt  README.md  access.h  command.cpp  command.h  config.in.h  controller.cpp  controller.h  device.h  emc.h  error.h  event.cpp  event.h  feature.h  gateway.cpp  gateway.h  host.cpp  host.h  latch.cpp  latch.h  mapper.cpp  mapper.h  monitor.cpp  monitor.h  pipeline.cpp  pipeline.h  protocol.h  reactor.cpp  reactor.h  service.cpp  service.h  session.cpp  session.h  stage.cpp  stage.h  timer.cpp  timer.h  transport.h
etc/: CMakeLists.txt  latch.cpp  latch.h  timer.cpp  timer.h
protocol/: CMakeLists.txt
protocol/emc/: CMakeLists.txt
protocol/raw/: CMakeLists.txt
service/: CMakeLists.txt  shell.cpp  shell.h
support/: CMakeLists.txt
transport/: CMakeLists.txt  base16.cpp  base64.cpp  uart.cpp  uart.h
